# plasma-active-window-control

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt  INSTALL  Messages.sh  generate_code.sh
lib/: CMakeLists.txt  activewindowcontrolapplet.cpp  activewindowcontrolapplet.h  appmenuapplet.cpp  appmenuapplet.h
package/: metadata.desktop
plugin/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h  appmenuplugin.cpp
plugin/libdbusmenuqt/: CMakeLists.txt  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.cpp  dbusmenushortcut_p.h  dbusmenutypes_p.cpp  dbusmenutypes_p.h  utils.cpp  utils_p.h
po/ast/: plasma_applet_org.kde.activeWindowControl.po
po/az/: plasma_applet_org.kde.activeWindowControl.po
po/be/: plasma_applet_org.kde.activeWindowControl.po
po/bg/: plasma_applet_org.kde.activeWindowControl.po
po/ca/: plasma_applet_org.kde.activeWindowControl.po
po/ca@valencia/: plasma_applet_org.kde.activeWindowControl.po
po/cs/: plasma_applet_org.kde.activeWindowControl.po
po/da/: plasma_applet_org.kde.activeWindowControl.po
po/de/: plasma_applet_org.kde.activeWindowControl.po
po/el/: plasma_applet_org.kde.activeWindowControl.po
po/en_GB/: plasma_applet_org.kde.activeWindowControl.po
po/es/: plasma_applet_org.kde.activeWindowControl.po
po/et/: plasma_applet_org.kde.activeWindowControl.po
po/eu/: plasma_applet_org.kde.activeWindowControl.po
po/fi/: plasma_applet_org.kde.activeWindowControl.po
po/fr/: plasma_applet_org.kde.activeWindowControl.po
po/gl/: plasma_applet_org.kde.activeWindowControl.po
(+40 files in other folders)
